# kielo-shared

./: .gitignore  gcs.json  gcs_utils.ts  go.mod  go.sum  package.json  pyproject.toml
.github/workflows/: auto-version.yml  notify-backend.yml
cryptoutil/: rsa.go  rsa_test.go
db/: envconfig.go  envconfig_test.go  initpool.go  initpool_test.go  retry.go  retry_test.go  searchpath.go  searchpath_test.go  support_language.go
db/pgxsearchpath/: connection.go  connection_test.go  languages.go  languages_test.go  pgxsearchpath.go  pgxsearchpath_test.go
errors/: auth.go  bff.go  coded.go  defaults.go  doc.go  errors_test.go  feature_limit.go
events/: behavioral.go  behavioral_test.go  cmswriterendpoint.go  eventtype.go  notificationcreated.go  outboxeventtype.go  publisheventtype.go  ulid.go  ulid_test.go  useraction.go  useraction_test.go
fingerprint/: fingerprint.go  fingerprint_test.go
gcs/: client.go  config.go  serve_url.go  serve_url_test.go  url_utils.go  url_utils_test.go
gcs/testing/: helpers.go
idempotency/: dedup.go  dedup_test.go
kielo_shared/: __init__.py  aiohttp_hooks.py  db_utils.py  envelope.py  gcs.json  gcs_utils.py  http.py  httpx_hooks.py  locale_constants.py  logging_filter.py  models_utils.py  paragraph_markup.py  pubsub_consumer.py  pubsub_utils.py  resource_types.py  sse.py  trace.py
kielo_shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kielo_shared/cms_writers/: __init__.py  client.py
kielo_shared/content_bridge/: __init__.py  client.py
kielo_shared/errors/: __init__.py
kielo_shared/events/: __init__.py
kielo_shared/llm/: __init__.py  cache.py  decorators.py  generate_validate.py  openai_provider.py  provider.py  registry.py  sync_bridge.py  types.py
kielo_shared/locale/: __init__.py  capability.py  fastapi.py  readiness.py  support_language.py
kielo_shared/localization/: __init__.py  budget.py  cache.py  cache_redis.py  contract.py  decorators.py  dynamic_registry.py  dynclient.py  fallback.py  gemini_provider.py  metrics_prom.py  openai_provider.py  override_pgx.py  provider.py  registry.py  routing.py  seam.py  support_locale_overrides.py  support_registry.py  types.py
kielo_shared/middleware/: __init__.py  legacy_alias.py  localization_budget.py  support_locale_overrides.py
kielo_shared/observability/: __init__.py  background_tasks.py  db_trace.py  metrics.py
kielo_shared/sdk/: __init__.py
kielo_shared/seam/: __init__.py
kielo_shared/vocab/: __init__.py  achievement.py  content_bridge_surface_type.py  in_app_nudge_anchor_target.py  in_app_nudge_context.py  in_app_nudge_type.py  scenario_source_type.py  user_item_status.py
locale/: capability.go  capability_test.go  conversation_category.go  conversation_category_dynregistry_test.go  conversation_category_test.go  locale.go  locale_test.go  localized.go  localized_test.go  readiness.go  resource_types.go  resource_types_test.go
localization/: budget.go  cache_key.go  guard.go  guard_test.go  registry.go  registry_test.go  seam.go  seam_cache.go  seam_guard.go  seam_metrics.go  seam_override.go  seam_persister.go  seam_round10d_test.go  seam_test.go  types.go
media/: attachment.go  context.go  control_plane_negative_test.go  entity_types.go  events.go  heromedia.go  lifecycle_test.go  media_test.go  mediaref.go  profiles.go  upload_contract.go  url.go  url_test.go
middleware/: active_language.go  active_language_test.go  active_support_language.go  auth_codes.go  auth_codes_test.go  bad_request_signature.go  bad_request_signature_test.go  cache_control.go  cors.go  cors_default.go  cors_default_test.go  cors_test.go  deprecation.go  deprecation_test.go  error_envelope_rewriter.go  error_envelope_rewriter_test.go  errors.go  errors_test.go  idempotency.go  idempotency_test.go  internal_api_key.go  internal_api_key_test.go  jwt.go  jwt_test.go  localization_budget.go  localization_budget_test.go  pubsub_auth.go  pubsub_auth_test.go  singleton_envelope_wrapper.go  singleton_envelope_wrapper_test.go  support_language.go  support_language_test.go  v3_defaults.go  v3_defaults_test.go
observe/: headers.go  headers_test.go  trace.go  trace_test.go
openapi/: common_params.go  common_params_test.go  field_schema_test.go  v3.go  v3_header_test.go  v3_path_test.go
pagination/: cursor.go  cursor_test.go  envelope.go  envelope_test.go  singleton.go
sdk/v3/: go.mod  (+2 more)
serverctl/: health.go  health_test.go  shutdown.go  shutdown_test.go
sse/: stdlib_writer.go  stdlib_writer_test.go  watcher.go  writer.go  writer_test.go
tests/: test_achievement_vocab.py  test_aiohttp_hooks.py  test_capability.py  test_content_bridge_client.py  test_db_trace.py  test_db_utils.py  test_dynamic_registry.py  test_errors.py  test_events.py  test_http.py  test_httpx_hooks.py  test_in_app_nudge_vocab.py  test_locale_constants.py  test_locale_optional_deps.py  test_locale_support_language.py  test_localization_budget.py  test_localization_cache_redis.py  test_localization_dynclient.py  test_localization_metrics_prom.py  test_localization_override_pgx.py  test_localization_seam.py  test_localization_seam_round10a.py  test_metrics_generate_validate.py  test_metrics_log_levels.py  test_metrics_tts_cache.py  test_middleware_legacy_alias.py  test_paragraph_markup.py  test_pubsub_consumer.py  test_pubsub_utils.py  test_resource_types.py  test_scenario_source_type_vocab.py  test_seam_llm.py  test_seam_stt.py  test_seam_tts.py  test_side_effect_failed_emit.py  test_spawn_background_task.py  test_sse.py  test_support_locale_overrides.py  test_support_locale_overrides_middleware.py  test_support_registry.py  (+1 more)
textutil/: textutil.go  textutil_test.go
timeutil/: day_boundary.go  day_boundary_test.go
translation/: client.go  client_test.go  routing.go  routing_test.go
ts/: gcs_utils.ts  index.ts
userlang/: grantsource.go  sources.go
vietnamese/: vietnamese.go  vietnamese_test.go
vocab/: achievement.go  contentbridgesurfacetype.go  emailsubjectkey.go  inappnudgeanchortarget.go  inappnudgecontext.go  inappnudgetype.go  itemtype.go  pushkey.go  scenariosourcetype.go  useritemstatus.go
(+97 files in other folders)
