[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kielo-shared"
dynamic = ["version"]
description = "Shared utilities for Kielo platform services"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy",
    "certifi",
    "httpx>=0.24",
]

[tool.deptry]

[tool.deptry.per_rule_ignores]
DEP001 = ["asyncpg", "fastapi", "prometheus_client"]

[tool.vulture]
# `ex` is the redis-py kwarg for TTL — Protocol abstract methods declare it
# so callers can pass it positionally or by name. Vulture sees the abstract
# method body (`...`) and flags it unused.
# `executemany` is the SQLAlchemy event hook signature — fixed by the framework.
# `session`, `trace_config_ctx` are aiohttp.TraceConfig hook signature params
# (see aiohttp_hooks.py); aiohttp invokes hooks positionally so the names are
# fixed by the framework even though our hook body only uses `params`.
ignore_names = ["ex", "executemany", "session", "trace_config_ctx"]

[tool.setuptools.dynamic]
version = {attr = "kielo_shared.__version__"}

[tool.setuptools.packages.find]
include = ["kielo_shared*"]

[tool.setuptools.package-data]
kielo_shared = ["*.json"]
