[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kielo-shared"
dynamic = ["version"]
description = "Shared utilities for Kielo platform services"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy",
    "certifi",
    "httpx>=0.24",
]

[tool.deptry]

[tool.deptry.per_rule_ignores]
# Consumer-provided runtime deps: kielo-shared exposes opt-in hooks /
# middleware / seam providers that only activate when the consumer's
# own pyproject installs the underlying library. Declaring them as
# required deps here would force every consumer to install the full
# union (aiohttp + starlette + google-genai + livekit-plugins-deepgram).
DEP001 = [
    "aiohttp",
    "asyncpg",
    "fastapi",
    "google",
    "livekit",
    "prometheus_client",
    "starlette",
]

[tool.vulture]
# `ex` is the redis-py kwarg for TTL — Protocol abstract methods declare it
# so callers can pass it positionally or by name. Vulture sees the abstract
# method body (`...`) and flags it unused.
# `executemany` is the SQLAlchemy event hook signature — fixed by the framework.
# `session`, `trace_config_ctx` are aiohttp.TraceConfig hook signature params
# (see aiohttp_hooks.py); aiohttp invokes hooks positionally so the names are
# fixed by the framework even though our hook body only uses `params`.
# `Message` is the google.cloud.pubsub_v1 Message class — imported under
# `if TYPE_CHECKING:` for string annotations in pubsub_consumer.py;
# vulture's static walk doesn't follow forward refs so flags it unused.
ignore_names = ["ex", "executemany", "session", "trace_config_ctx", "Message"]

[tool.setuptools.dynamic]
version = {attr = "kielo_shared.__version__"}

[tool.setuptools.packages.find]
include = ["kielo_shared*"]

[tool.setuptools.package-data]
kielo_shared = ["*.json"]
